--- a/spania-bosted/src/app/Pages/front-page/front-page.component.html
+++ b/spania-bosted/src/app/Pages/front-page/front-page.component.html
@@ -1,1 +1,63 @@
-<p>front-page works!</p>
+<!-- Landing -->
+<div
+  class="relative mb-12 h-[90vh] bg-landing-image bg-no-repeat bg-cover flex justify-center items-center"
+>
+  <div class="">
+    <img src="/assets/design-elements/Logo.svg" alt="" class="h-32" />
+  </div>
+  <img
+    src="/assets/design-elements/img-transition1.svg"
+    alt=""
+    class="absolute block h-auto bottom-0"
+  />
+</div>
+
+<!-- Introduction -->
+<div class="text-center max-w-4xl mx-auto mb-16">
+  <p class="text-3xl mb-4">Spania Bosted Businiss Portal</p>
+  <p class="text-xl">
+    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+    Lorem Ipsum has been the industry's standard dummy text ever since the
+    1500s, when an unknown printer took a galley of type and scrambled it to
+    make a type specimen book. It has survived not only five centuries, but also
+    the leap into electronic typesetting, remaining essentially unchanged. It
+    was popularised in the 1960s with the release of
+  </p>
+</div>
+
+<!-- Contact -->
+<div class="bg-secondary ">
+    <div class="max-w-5xl mx-auto py-12 ">
+        <p class="text-2xl mb-8 text-center">Have a problem? Contact either of our support teams!</p>
+        <div class="flex gap-x-20 mx-auto w-fit text-white">
+            <button class="bg-accent py-2 px-4 rounded-2xl hover:bg-accent/80 active:bg-accent/60">
+                IT-Support
+            </button>
+            <button class="bg-accent py-2 px-4 rounded-2xl hover:bg-accent/80 active:bg-accent/60">
+                HR department
+            </button>
+        </div>
+    </div>
+
+</div>
+
+<!-- About Spania Bosted -->
+<div class="bg-accent text-white">
+  <div class="py-8 flex gap-x-16 max-w-5xl mx-auto">
+    <img src="/assets/images/home-office.jpg" alt="" class="rounded" />
+    <div class="flex-col flex justify-between">
+        <div>
+            <p class="text-3xl mb-6">Spania Bosted</p>
+            <p class="text-xl">
+              Spania Bosted er et norsk eiendomsmeglerfirma som spesialiserer seg på å
+              hjelpe kunder med å finne og kjøpe drømmeboligen i Spania. Vi tilbyr
+              tjenester innenfor rådgivning, forhandlinger, finansiering og juridisk
+              bistand for å sikre en smidig og trygg prosess for våre kunder.
+            </p>
+        </div>
+      <button class="bg-secondaryAccent w-fit py-2 px-4 text-center text-white rounded-2xl ml-auto">Spania Bosted</button>
+    </div>
+  </div>
+</div>
+
+<!-- Projects -->
