--- a/spania-bosted/src/app/Pages/front-page/front-page.component.html
+++ b/spania-bosted/src/app/Pages/front-page/front-page.component.html
@@ -26,38 +26,53 @@
 </div>
 
 <!-- Contact -->
-<div class="bg-secondary ">
-    <div class="max-w-5xl mx-auto py-12 ">
-        <p class="text-2xl mb-8 text-center">Have a problem? Contact either of our support teams!</p>
-        <div class="flex gap-x-20 mx-auto w-fit text-white">
-            <button class="bg-accent py-2 px-4 rounded-2xl hover:bg-accent/80 active:bg-accent/60">
-                IT-Support
-            </button>
-            <button class="bg-accent py-2 px-4 rounded-2xl hover:bg-accent/80 active:bg-accent/60">
-                HR department
-            </button>
-        </div>
+<div class="bg-secondary">
+  <div class="max-w-5xl mx-auto py-12">
+    <p class="text-2xl mb-8 text-center">
+      Have a problem? Contact either of our support teams!
+    </p>
+    <div class="flex gap-x-20 mx-auto w-fit text-white">
+      <button
+        class="bg-accent py-2 px-4 rounded-2xl hover:bg-accent/80 active:bg-accent/60"
+      >
+        IT-Support
+      </button>
+      <button
+        class="bg-accent py-2 px-4 rounded-2xl hover:bg-accent/80 active:bg-accent/60"
+      >
+        HR department
+      </button>
     </div>
-
+  </div>
 </div>
 
 <!-- About Spania Bosted -->
-<div class="bg-accent text-white">
+<div class="bg-accent text-white mb-12">
   <div class="py-8 flex gap-x-16 max-w-5xl mx-auto">
     <img src="/assets/images/home-office.jpg" alt="" class="rounded" />
     <div class="flex-col flex justify-between">
-        <div>
-            <p class="text-3xl mb-6">Spania Bosted</p>
-            <p class="text-xl">
-              Spania Bosted er et norsk eiendomsmeglerfirma som spesialiserer seg på å
-              hjelpe kunder med å finne og kjøpe drømmeboligen i Spania. Vi tilbyr
-              tjenester innenfor rådgivning, forhandlinger, finansiering og juridisk
-              bistand for å sikre en smidig og trygg prosess for våre kunder.
-            </p>
-        </div>
-      <button class="bg-secondaryAccent w-fit py-2 px-4 text-center text-white rounded-2xl ml-auto">Spania Bosted</button>
+      <div>
+        <p class="text-3xl mb-6">Spania Bosted</p>
+        <p class="text-xl">
+          Spania Bosted er et norsk eiendomsmeglerfirma som spesialiserer seg på
+          å hjelpe kunder med å finne og kjøpe drømmeboligen i Spania. Vi tilbyr
+          tjenester innenfor rådgivning, forhandlinger, finansiering og juridisk
+          bistand for å sikre en smidig og trygg prosess for våre kunder.
+        </p>
+      </div>
+      <button
+        class="bg-secondaryAccent w-fit py-2 px-4 text-center text-white rounded-2xl ml-auto"
+      >
+        Spania Bosted
+      </button>
     </div>
   </div>
 </div>
 
 <!-- Projects -->
+<div class="max-w-7xl mx-auto block justify-center mb-12">
+  <p class="text-5xl text-center">Our Available Projects</p>
+  <app-available-projects></app-available-projects>
+</div>
+
+<!--  -->
