--- a/spania-bosted/src/app/Pages/front-page/front-page.component.html
+++ b/spania-bosted/src/app/Pages/front-page/front-page.component.html
@@ -33,12 +33,12 @@
     </p>
     <div class="flex gap-x-20 mx-auto w-fit text-white">
       <button
-        class="bg-accent py-2 px-4 rounded-2xl hover:bg-accent/80 active:bg-accent/60"
+        class="btn-accent"
       >
         IT-Support
       </button>
       <button
-        class="bg-accent py-2 px-4 rounded-2xl hover:bg-accent/80 active:bg-accent/60"
+        class="btn-accent"
       >
         HR department
       </button>
@@ -61,7 +61,7 @@
         </p>
       </div>
       <button
-        class="bg-secondaryAccent w-fit py-2 px-4 text-center text-white rounded-2xl ml-auto"
+        class="btn-secondaryAccent w-fit !rounded-full "
       >
         Spania Bosted
       </button>
@@ -75,4 +75,3 @@
   <app-available-projects></app-available-projects>
 </div>
 
-<!--  -->
