--- a/spania-bosted/src/app/Components/available-projects/available-projects.component.html
+++ b/spania-bosted/src/app/Components/available-projects/available-projects.component.html
@@ -16,7 +16,7 @@
     </div>
   </div>
   <button
-    class="bg-accent py-2 px-4 rounded-xl hover:bg-accent/80 active:bg-accent/60 text-white"
+    class="btn-accent mx-auto"
     (click)="showLess ? showLessProjects() : showMoreProjects()"
   >
     {{ showLess ? "Show less" : "Show more" }}
