--- a/spania-bosted/src/styles.scss
+++ b/spania-bosted/src/styles.scss
@@ -37,6 +37,14 @@ $spania-bosted-theme: mat.define-light-theme((
 @tailwind components;
 @tailwind utilities;
 
+.btn-accent {
+  @apply bg-accent py-2 px-4 rounded-2xl hover:bg-accent/80 active:bg-accent/60 border border-accent/60 text-white;
+}
+
+.btn-secondaryAccent {
+  @apply bg-secondaryAccent py-2 px-4 rounded-2xl hover:bg-secondaryAccent/80 active:bg-secondaryAccent/60 border border-secondaryAccent/60 text-white;
+}
+
 body,
 html {
   font-family: "Montserrat", sans-serif;
