--- a/spania-bosted/src/app/Pages/front-page/front-page.component.html
+++ b/spania-bosted/src/app/Pages/front-page/front-page.component.html
@@ -75,3 +75,12 @@
   <app-available-projects></app-available-projects>
 </div>
 
+<!-- Our Team -->
+
+<div class="bg-offWhite mb-12 py-12">
+  <div class="max-w-7xl mx-auto">
+    <p class="text-5xl text-center mb-12">Our Team</p>
+    <app-our-team></app-our-team>
+  </div>
+
+</div>
