--- a/spania-bosted/src/app/Pages/front-page/front-page.component.html
+++ b/spania-bosted/src/app/Pages/front-page/front-page.component.html
@@ -3,7 +3,7 @@
   class="relative mb-12 h-[90vh] bg-landing-image bg-no-repeat bg-cover flex justify-center items-center"
 >
   <div class="">
-    <img src="/assets/design-elements/Logo.svg" alt="" class="h-32" />
+    <img src="/assets/design-elements/Logo.png" alt="" class="h-32" />
   </div>
   <img
     src="/assets/design-elements/img-transition1.svg"
@@ -31,7 +31,7 @@
     <p class="text-2xl mb-8 text-center">
       Have a problem? Contact either of our support teams!
     </p>
-    <div class="flex gap-x-20 mx-auto w-fit text-white">
+    <div class="flex gap-x-20 mx-auto w-fit text-white relative">
       <button
         class="btn-accent"
       >
