--- a/spania-bosted/src/app/Components/available-projects/available-projects.component.html
+++ b/spania-bosted/src/app/Components/available-projects/available-projects.component.html
@@ -7,7 +7,7 @@
     <img src="{{ item.imgUrl }}" alt="" class="rounded h-60 object-contain" />
     <p class="font-medium text-xl mb-1">{{ item.projectName }}</p>
     <p class="font-thin mb-2 text-lg">
-      Project Manager: <span>{{ item.projectLeader }}</span>
+      Prosjekt Ansvarlig: <span>{{ item.projectLeader }}</span>
     </p>
     <p class="text-lg">{{ item.shortDescription }}</p>
   </div>
