--- a/spania-bosted/src/app/Pages/front-page/front-page.component.html
+++ b/spania-bosted/src/app/Pages/front-page/front-page.component.html
@@ -29,19 +29,11 @@
 <div class="bg-secondary">
   <div class="max-w-5xl mx-auto py-12">
     <p class="text-2xl mb-8 text-center">
-      Have a problem? Contact either of our support teams!
+      Har du et problem? Kontakt en av støtte avdelingene våres!
     </p>
     <div class="flex gap-x-20 mx-auto w-fit text-white relative">
-      <button
-        class="btn-accent"
-      >
-        IT-Support
-      </button>
-      <button
-        class="btn-accent"
-      >
-        HR department
-      </button>
+      <button class="btn-accent">IT-Support</button>
+      <button class="btn-accent">HR avdeling</button>
     </div>
   </div>
 </div>
@@ -60,9 +52,7 @@
           bistand for å sikre en smidig og trygg prosess for våre kunder.
         </p>
       </div>
-      <button
-        class="btn-secondaryAccent w-fit !rounded-full "
-      >
+      <button class="btn-secondaryAccent w-fit !rounded-full">
         Spania Bosted
       </button>
     </div>
@@ -71,7 +61,7 @@
 
 <!-- Projects -->
 <div class="max-w-7xl mx-auto block justify-center mb-12">
-  <p class="text-5xl text-center">Our Available Projects</p>
+  <p class="text-5xl text-center">Våre tilgjenglige prosjekter</p>
   <app-available-projects></app-available-projects>
 </div>
 
@@ -79,8 +69,7 @@
 
 <div class="bg-offWhite mb-12 py-12">
   <div class="max-w-7xl mx-auto">
-    <p class="text-5xl text-center mb-12">Our Team</p>
+    <p class="text-5xl text-center mb-12">Våre ansatte</p>
     <app-our-team></app-our-team>
   </div>
-
 </div>
