cleanup, and hover animation

--- a/spania-bosted/src/app/Pages/front-page/front-page.component.html
+++ b/spania-bosted/src/app/Pages/front-page/front-page.component.html
@@ -46,6 +46,7 @@
       <div>
         <p class="text-3xl mb-6">Spania Bosted</p>
         <p class="text-xl">
+          
           Spania Bosted er et norsk eiendomsmeglerfirma som spesialiserer seg på
           å hjelpe kunder med å finne og kjøpe drømmeboligen i Spania. Vi tilbyr
           tjenester innenfor rådgivning, forhandlinger, finansiering og juridisk
@@ -61,12 +62,11 @@
 
 <!-- Projects -->
 <div class="max-w-7xl mx-auto block justify-center mb-12">
-  <p class="text-5xl text-center">Våre tilgjenglige prosjekter</p>
+  <p class="text-5xl text-center mb-12">Våre tilgjenglige prosjekter</p>
   <app-available-projects></app-available-projects>
 </div>
 
 <!-- Our Team -->
-
 <div class="bg-offWhite mb-12 py-12">
   <div class="max-w-7xl mx-auto">
     <p class="text-5xl text-center mb-12">Våre ansatte</p>
