--- a/spania-bosted/src/app/Components/available-projects/available-projects.component.html
+++ b/spania-bosted/src/app/Components/available-projects/available-projects.component.html
@@ -1,10 +1,10 @@
 <div class="grid grid-cols-4 gap-x-10">
   <div
-    class="bg-white shadow-2xl rounded-lg px-6 py-2 mb-8"
+    class="bg-white shadow-2xl rounded-lg px-6 py-6 mb-8 hover:scale-105 transition-all duration-200 cursor-pointer"
     *ngFor="let item of projectData | slice : 0 : amountOfProjects"
     (click)="openModule(item)"
   >
-    <img src="{{ item.imgUrl }}" alt="" class="rounded h-60 object-contain" />
+    <img src="{{ item.imgUrl }}" alt="" class="rounded w-full object-contain mb-4" />
     <p class="font-medium text-xl mb-1">{{ item.projectName }}</p>
     <p class="font-thin mb-2 text-lg">
       Prosjekt Ansvarlig: <span>{{ item.projectLeader }}</span>
