--- a/spania-bosted/src/app/Components/cookie-banner/cookie-banner.component.html
+++ b/spania-bosted/src/app/Components/cookie-banner/cookie-banner.component.html
@@ -2,15 +2,23 @@
   *ngIf="!isAccepted"
   class="fixed bottom-4 left-4 z-50 h-80 w-80 rounded bg-secondaryOffWhite py-8"
 >
-  <div class="mx-auto flex flex-col items-center px-10 justify-between h-full">
+  <div class="mx-auto flex h-full flex-col items-center justify-between px-10">
     <div>
-        <p class="mb-4 text-lg font-semibold">informasjonskapsler og personvern</p>
-        <p class="text-sm">
-          Vi bruker informasjonskapsler (cookies) for å forbedre din
-          brukeropplevelse og analysere webtrafikken. Ved å trykke "aksepter"
-          samtykker du til bruken av cookies. 
-          <a href="https://spaniabosted.no/cookies/" target="_blank" rel="noopener noreferrer" class="underline text-blue-300 hover:text-blue-400">cookies-policy</a>
-        </p>
+      <p class="mb-4 text-lg font-semibold">
+        informasjonskapsler og personvern
+      </p>
+      <p class="text-sm">
+        Vi bruker informasjonskapsler (cookies) for å forbedre din
+        brukeropplevelse og analysere webtrafikken. Ved å trykke "aksepter"
+        samtykker du til bruken av cookies.
+        <a
+          href="https://spaniabosted.no/cookies/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-blue-300 underline hover:text-blue-400"
+          >cookies-policy</a
+        >
+      </p>
     </div>
     <button
       (click)="acceptCookies()"
